--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "marked": "^14.1.2",
     "marked-highlight": "^2.2.2",
     "mongoose": "^8.17.1",
-    "next": "^16.0.0-beta.0",
+    "next": "^16.0.1",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "path": "^0.12.7",
