--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/eden": "^1.4.5",
     "@elysiajs/swagger": "^1.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
