--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "predev": "npm run scripts/sync-feature-flags.ts",
+    "predev": "tsx run scripts/sync-feature-flags.ts",
     "dev": "next dev --turbopack",
     "dev:classic": "next dev",
-    "flags:sync": "npm run scripts/sync-feature-flags.ts",
+    "flags:sync": "tsx run scripts/sync-feature-flags.ts",
     "next-build": "next build",
     "build": "npm run sitemap && cross-env NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "cross-env NEXT_TELEMETRY_DISABLED=1 next start",
     "lint": "next lint",
-    "sitemap": "npm run scripts/sitemap.ts",
+    "sitemap": "tsx run scripts/sitemap.ts",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -33,7 +33,7 @@
     "@mui/material": "^7.3.1",
     "blurhash": "^2.0.5",
     "dotenv": "^17.2.1",
-    "elysia": "^1.4.18",
+    "elysia": "^1.4.17",
     "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
     "highlight.js": "^11.11.1",
@@ -46,7 +46,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "path": "^0.12.7",
-    "postcss": "8.4.49",
+    "postcss": "^8.4.49",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -71,6 +71,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
 }
