--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "next dev --turbopack",
     "dev:classic": "next dev",
     "flags:sync": "tsx scripts/sync-feature-flags.ts",
-    "next-build": "next build",
+    "next-build": "next build --webpack",
     "build": "npm run sitemap && cross-env NEXT_TELEMETRY_DISABLED=1 next build",
+    "build-local": "npm run sitemap && cross-env NEXT_TELEMETRY_DISABLED=1 next build --webpack",
     "start": "cross-env NEXT_TELEMETRY_DISABLED=1 next start",
     "lint": "next lint",
     "sitemap": "tsx scripts/sitemap.ts",
@@ -34,16 +35,15 @@
     "@sentry/nextjs": "^10.32.1",
     "blurhash": "^2.0.5",
     "dotenv": "^17.2.1",
-    "elysia": "^1.4.17",
     "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
     "highlight.js": "^11.11.1",
     "html-react-parser": "^5.1.16",
     "jszip": "^3.10.1",
-    "marked": "^14.1.2",
+    "marked": "^17.0.1",
     "marked-highlight": "^2.2.2",
-    "mongoose": "^8.17.1",
-    "next": "^16.0.8",
+    "mongoose": "^9.1.1",
+    "next": "^16.1.1",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "path": "^0.12.7",
@@ -58,11 +58,11 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "swr": "^2.3.6",
-    "zod": "3.23.8"
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@types/jszip": "^3.4.0",
-    "@types/node": "^24.2.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.2",
     "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
