--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sentry/nextjs": "^10.32.1",
     "blurhash": "^2.0.5",
     "dotenv": "^17.2.1",
+    "elysia-rate-limit": "^4.4.2",
     "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
     "highlight.js": "^11.11.1",
